@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2020,v 1.6522 2020/12/02 08:50:24 ast Exp $
+$NetBSD: CHANGES-2020,v 1.6523 2020/12/02 11:06:55 ast Exp $
 
 Changes to the packages collection and infrastructure in 2020:
 
@@ -9506,3 +9506,4 @@ Changes to the packages collection and infrastructure in 2020:
 	Updated devel/lemon to 1.0.3.34.0 [adam 2020-12-02]
 	Updated devel/ocaml-optint to 0.0.4 [he 2020-12-02]
 	Updated games/cgoban-java to 3.5.23 [ast 2020-12-02]
+	Updated devel/p5-Perl-Critic to 1.138nb2 [ast 2020-12-02]
